Validación de docente, fechaEspecial y recurso. Modificación de las vistas.

--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Aula/edit.html.twig
@@ -12,28 +12,26 @@
         {{ form_errors(edit_form) }}
     </div>
 
-    <div>
+    
         {{ form_label(edit_form.nombre) }}
         {{ form_errors(edit_form.nombre) }}
         {{ form_widget(edit_form.nombre) }}
-    </div>
-    <p>----------</p>
-    <div>
+    
+    
+    
         {{ form_label(edit_form.edificio) }}
         {{ form_errors(edit_form.edificio) }}
         {{ form_widget(edit_form.edificio) }}
-    </div>
-    <p>----------</p>
+    
+    
 
 
     {{ form_end(edit_form) }}
-
-    <ul class="record_actions">
-        <li>
-            <a href="{{ path('aulas') }}">
+       
+            <a class="btn btn-primary" href="{{ path('aulas') }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
                 Volver a la lista
             </a>
-        </li>
-        <li>{{ form(delete_form) }}</li>
-    </ul>
+               
+        {{ form(delete_form) }}
+     
 {% endblock %}
