--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Docente/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Docente/index.html.twig
@@ -9,13 +9,13 @@
             <tr>
                 <th>Nombre</th>
                 <th>Dni</th>
-                <th>Accciones</th>
+                <th>Accción</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('docente_show', { 'id': entity.id }) }}">{{ entity.nombre }}</a></td>
+                <td>{{ entity.nombre }}</td>
                 <td>{{ entity.dni }}</td>
                 <td><a href="{{ path('docente_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil"></span> EDITAR</a>
                 </td>
