--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Recurso/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Recurso/index.html.twig
@@ -1,41 +1,30 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Recurso list</h1>
-
-    <table class="records_list">
+    <h1>Recursos</h1>
+    <p><a class="btn btn-primary" href="{{ path('recurso_new') }}"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> AGREGAR</a>
+    <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
+               
                 <th>Nombre</th>
-                <th>Actions</th>
+                <th>Acción</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('recurso_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+            <tr>                
                 <td>{{ entity.nombre }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('recurso_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('recurso_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                <td>                
+                    
+                        <a href="{{ path('recurso_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil"></span> Editar</a>
+                    
+                
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('recurso_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
+        
     {% endblock %}
