--- a/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/edit.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>FechaEspecial - Edición</h1>
+    <h1>Fechas Especiales - Edición</h1>
 
     {{ form_start(edit_form) }}
         {{ form_errors(edit_form) }}
@@ -11,22 +11,22 @@
             {{ form_errors(edit_form.fecha) }}
             {{ form_widget(edit_form.fecha) }}
         </div>
-        <p>----------</p>
+        
         <div>
             {{ form_label(edit_form.descripcion) }}
             {{ form_errors(edit_form.descripcion) }}
             {{ form_widget(edit_form.descripcion) }}
         </div>
-        <p>----------</p>
+        
         
         
         {{ form_end(edit_form) }}
 
-    <li>
-        <a href="{{ path('fechaespecial') }}">
+    
+        <a class="btn btn-primary" href="{{ path('fechaespecial') }}"> <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
             Volver a la lista
         </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
+    
+    {{ form(delete_form) }}
 </ul>
 {% endblock %}
