--- a/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/FechaEspecial/index.html.twig
@@ -8,8 +8,8 @@
         <thead>
             <tr>
                 <th>Fecha</th>
-                <th>Descripcion</th>
-                <th>Actions</th>
+                <th>Descripción</th>
+                <th>Acción</th>
             </tr>
         </thead>
         <tbody>
@@ -18,7 +18,7 @@
                 <td>{% if entity.fecha %}{{ entity.fecha|date('Y-m-d') }}{% endif %}</td>
                 <td>{{ entity.descripcion }}</td>
                 <td>
-                    <a href="{{ path('fechaespecial_show', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-search"></span> VER</a> - 
+                     
                     <a href="{{ path('fechaespecial_edit', { 'id': entity.id }) }}"><span class="glyphicon glyphicon-pencil"></span> EDITAR</a>
                 </td>
             </tr>
