--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Docente/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Docente/index.html.twig
@@ -9,7 +9,7 @@
             <tr>
                 <th>Nombre</th>
                 <th>Dni</th>
-                <th>Accción</th>
+                <th>Acción</th>
             </tr>
         </thead>
         <tbody>
