--- a/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/Edificio/index.html.twig
@@ -9,7 +9,7 @@
         <thead>
             <tr>
                 <th>Nombre</th>
-                <th>Actions</th>
+                <th>Acción</th>
             </tr>
         </thead>
         <tbody>
