Cambios en navbar, y cosas para ajax.

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -35,6 +35,7 @@
             <li><a href="#">Otros</a></li>
             <li class="divider"></li>
             <li><a href="{{path('reserva')}}">Reservas - Prueba</a></li>            
+            <li><a href="{{path('reserva_index2')}}">Reservas - Index2</a></li>            
           </ul>
         </li>
 
