--- a/src/UNTDF/ReservasAulasBundle/Resources/views/ReservasMain/index.html.twig
+++ b/src/UNTDF/ReservasAulasBundle/Resources/views/ReservasMain/index.html.twig
@@ -1,40 +1,48 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
+    <div class="container">
     <h1>Listado de Reservas</h1>
-
+    <div class="row">
+    <div class="col-md-11 col-md-offset-1">    
     <form id="formulariobase">
 
         <div class="input-daterange input-group" id="datepicker" class="datepicker">
             <label class="col-sm-1 col-lg-1 control-label" for="fechadesde">Desde</label>
             <div class="col-sm-2 col-lg-2">
-                <input type="text" class="input-sm form-control" id="fechadesde" name="fechadesde" size="10" value="{{ "now"|date('Y-m-d')}}"/>
+                <input type="text" class="form-control" id="fechadesde" name="fechadesde" size="10" value="{{ "now"|date('Y-m-d')}}"/>
             </div>
             <label class="col-sm-1 col-lg-1 control-label" for="fechahasta">hasta</label>
             <div class="col-sm-2 col-lg-2">
-                <input type="text" class="input-sm form-control" id="fechahasta" name="fechahasta" size="10" value="{{ "now"|date_modify('+7 days')|date('Y-m-d')}}"/>
+                <input type="text" class="form-control" id="fechahasta" name="fechahasta" size="10" value="{{ "now"|date_modify('+7 days')|date('Y-m-d')}}"/>
             </div>
         </div>
-
-        <select name="evento">
+        
+        <div class="col-sm-4">    
+        <select name="evento" class="form-control">
             <option value="0">TODOS LOS EVENTOS</option>
             {% for evento in eventos %}
                 <option value="{{ evento.id }}">{{ evento.getNombre() }}</option>
             {% endfor %}
         </select>
-        <select name="aula">
+        </div>
+        <div class="col-sm-4">
+        <select name="aula" class="form-control">
             <option value="0">TODAS LAS AULAS</option>
             {% for aula in aulas %}
                 <option value="{{ aula.id }}">{{ aula.getNombre() }}</option>
             {% endfor %}
         </select>
-        <select name="docente">
+        </div>
+        <div class="col-sm-4">
+        <select name="docente" class="form-control">
             <option value="0">TODOS LOS DOCENTES</option>
             {% for docente in docentes %}
                 <option value="{{ docente.id }}">{{ docente.getNombre() }}</option>
             {% endfor %}
         </select>
-
+        </div>
+        
         {# <p>Date: <input type="text" id="datepicker" size="30"></p> #}
         {#
         <div class="input-group date alone">
@@ -43,8 +51,12 @@
         #}
 
     </form>
-
-    <button id="btnFiltro">Aplicar Filtro</button>
+    </div>    
+    </div>
+        
+    <div class="row">
+    <div class="col-md-11 col-md-offset-1">    
+    <p><button id="btnFiltro" class="btn btn-default">Aplicar Filtro</button></p>
 
     <table class="table table-bordered">
         <thead>
@@ -65,7 +77,9 @@
         <tbody class="listado_tabla">
         </tbody>
     </table>
-
+    </div>
+    </div>
+    </div>
 {% endblock %}
 
 {% block stylesheets %}
